--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@
 }
 
 #Title{
+    font-family: Georgia, Times, 'Times New Roman', serif;
     text-shadow: 3px 1px black;
     color:white;
-    background-color: rgb(63, 157, 185);
+    background-color: rgb(63, 157, 185);    
     height: 100%;
 }
 
