--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
                                     supported by Chrome and Opera */
 }
 
+html, body{
+     max-width:100%;
+     max-height:100%;
+     overflow:hidden;
+}
+
 #Title{
     font-family: Georgia, Times, 'Times New Roman', serif;
     text-shadow: 3px 1px black;
